[package]
name = "hangul"
version = "0.1.0"
authors = ["YujinGaya <yujin.gaya@gmail.com>"]
edition = "2018"
description = "Utilities to manipulate Hangul Syllables"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YujinGaya/hangul"
keywords = ["hangul", "char"]
categories = ["encoding", "localization", "text-processing", "value-formatting"]

[dependencies]
