[package]
name = "hangul"
version = "0.1.2"
authors = ["YujinGaya <yujin.gaya@gmail.com>"]

edition = "2018"

description = "Utilities to manipulate Hangul Syllables"
license = "MIT"
keywords = ["hangul", "char"]
categories = ["encoding", "localization", "text-processing", "value-formatting"]

repository = "https://github.com/YujinGaya/hangul"
documentation = "https://docs.rs/hangul"

readme = "README.md"

[dependencies]
